3.3.12 - balanced the Heart Stealer and corrected it heart adding code